// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LectureDetail > hasHomework is false 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-86zk83-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-qn5tej-MuiSvgIcon-root"
        data-testid="ChevronLeftIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body2 css-xw5kh4-MuiTypography-root"
      >
        К списку уроков
      </p>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <h2
      class="MuiTypography-root MuiTypography-h2 css-1ixbp5x-MuiTypography-root"
    >
      string
    </h2>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1xm6bug-MuiPaper-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1rtsxgi-MuiTypography-root"
      >
        Содержание урока
      </h5>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
      />
      <div
        class="MuiStack-root css-nen11g-MuiStack-root"
      >
        <div
          class="MuiStack-root css-vutjc0-MuiStack-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1d5czy6-MuiTypography-root"
          >
            1
          </h6>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1pb42qt-MuiTypography-root"
          >
            string1
          </h6>
        </div>
        <div
          class="MuiStack-root css-vutjc0-MuiStack-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1d5czy6-MuiTypography-root"
          >
            2
          </h6>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1pb42qt-MuiTypography-root"
          >
            string2
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-19betnq-MuiPaper-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1rtsxgi-MuiTypography-root"
      >
        Спикеры
      </h5>
      <div
        class="MuiStack-root css-m5qggf-MuiStack-root"
      >
        <div
          class="MuiStack-root css-e4wh76-MuiStack-root"
        >
          <div
            class="MuiStack-root css-czl7p-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1mdff12-MuiAvatar-root"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-dfhrm0-MuiTypography-root"
              >
                ss
              </h6>
            </div>
            <div
              class="MuiBox-root css-189yone"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-nm8eko-MuiTypography-root"
              >
                string string
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1fwp6s7-MuiPaper-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1rtsxgi-MuiTypography-root"
      >
        Материалы урока
      </h5>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
      />
      <div
        class="MuiStack-root css-1u4qgj1-MuiStack-root"
      />
    </div>
    <div
      class="MuiBox-root css-19sk4h4"
    >
      <div
        class="MuiBox-root css-847q77"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1n8pi7-MuiPaper-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1gr94hq-MuiTypography-root"
          >
            Домашнее задание
          </h5>
          <div
            class="MuiStack-root css-1yc1p5z-MuiStack-root"
          />
        </div>
        <div
          class="MuiBox-root css-1qg03zn"
        >
          <div
            class="MuiGrid-root MuiGrid-container css-il5n0a-MuiGrid-root"
          >
            <span
              class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-d3oyhb-MuiCircularProgress-root"
              role="progressbar"
              style="width: 40px; height: 40px;"
            >
              <svg
                class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-disableElevation css-1y9wavw-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Д/З недоступно
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LectureDetail > hasHomework is true 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-86zk83-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-qn5tej-MuiSvgIcon-root"
        data-testid="ChevronLeftIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body2 css-xw5kh4-MuiTypography-root"
      >
        К списку уроков
      </p>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <h2
      class="MuiTypography-root MuiTypography-h2 css-1ixbp5x-MuiTypography-root"
    >
      string
    </h2>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1xm6bug-MuiPaper-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1rtsxgi-MuiTypography-root"
      >
        Содержание урока
      </h5>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
      />
      <div
        class="MuiStack-root css-nen11g-MuiStack-root"
      >
        <div
          class="MuiStack-root css-vutjc0-MuiStack-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1d5czy6-MuiTypography-root"
          >
            1
          </h6>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1pb42qt-MuiTypography-root"
          >
            string1
          </h6>
        </div>
        <div
          class="MuiStack-root css-vutjc0-MuiStack-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1d5czy6-MuiTypography-root"
          >
            2
          </h6>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1pb42qt-MuiTypography-root"
          >
            string2
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-19betnq-MuiPaper-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1rtsxgi-MuiTypography-root"
      >
        Спикеры
      </h5>
      <div
        class="MuiStack-root css-m5qggf-MuiStack-root"
      >
        <div
          class="MuiStack-root css-e4wh76-MuiStack-root"
        >
          <div
            class="MuiStack-root css-czl7p-MuiStack-root"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1mdff12-MuiAvatar-root"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-dfhrm0-MuiTypography-root"
              >
                ss
              </h6>
            </div>
            <div
              class="MuiBox-root css-189yone"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-nm8eko-MuiTypography-root"
              >
                string string
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1fwp6s7-MuiPaper-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1rtsxgi-MuiTypography-root"
      >
        Материалы урока
      </h5>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
      />
      <div
        class="MuiStack-root css-1u4qgj1-MuiStack-root"
      />
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1n8pi7-MuiPaper-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1gr94hq-MuiTypography-root"
      >
        Домашнее задание
      </h5>
      <div
        class="MuiStack-root css-1yc1p5z-MuiStack-root"
      >
        <div
          class="MuiBox-root css-i6bazn"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 css-2sm3sf-MuiTypography-root"
          >
            Здесь будет отображаться текст домашнего задания к текущей лекции.
            <br />
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-2sm3sf-MuiTypography-root"
          >
            Пример домашнего задания:
            <br />
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-2sm3sf-MuiTypography-root"
          >
            1. Есть ли разница между $("h1 div"); и $("h1").$("div").
            <br />
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-2sm3sf-MuiTypography-root"
          >
            Может ли привести к тому что, поиск найдёт разные элементы?
            <br />
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-2sm3sf-MuiTypography-root"
          >
            2. Разработайте следующий автотест:
            <br />
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-2sm3sf-MuiTypography-root"
          >
             - Откройте страницу Selenide в Github
            <br />
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-2sm3sf-MuiTypography-root"
          >
             - Перейдите в раздел Wiki проекта
            <br />
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-2sm3sf-MuiTypography-root"
          >
             - Убедитесь, что в списке страниц (Pages) есть страница SoftAssertions
            <br />
          </p>
          <p
            class="MuiTypography-root MuiTypography-body2 css-2sm3sf-MuiTypography-root"
          >
             - Откройте страницу SoftAssertions, проверьте что внутри есть пример кода для JUnit5
            <br />
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-il5n0a-MuiGrid-root"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-d3oyhb-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-il5n0a-MuiGrid-root"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-d3oyhb-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
